@@ -21,7 +21,7 @@ install:
 	fi \
 
 	cp ./httpd.conf $(SYSTEM_CONF)/apache
-	cp ./master.conf $(SYSTEM_CONF)/apache
+	cp ./00_master.conf $(SYSTEM_CONF)/apache
 	cp -R ./backup $(SYSTEM_CONF)/apache
 	cp -R ./parts $(SYSTEM_CONF)/apache
 	cp -R ./working $(SYSTEM_CONF)/apache
