@@ -515,9 +515,9 @@ sub uninstall_httpd {
 
     return $rs if ($rs != 0);
 
-    sys_command_rs("a2dissite master.conf &> /tmp/ispcp-uninstall-services.log");
+    sys_command_rs("a2dissite 00_master.conf &> /tmp/ispcp-uninstall-services.log");
 
-    $rs = del_file("$main::cfg{'APACHE_SITES_DIR'}/master.conf");
+    $rs = del_file("$main::cfg{'APACHE_SITES_DIR'}/00_master.conf");
 
     return $rs if ($rs != 0);
 
